--- a/sections/startg.css
+++ b/sections/startg.css
@@ -13,14 +13,18 @@
   #p-output p {font-size: 5vw;}
   #eval_ply {font-size:2.5vw; box-shadow:14px 13px 0px 6px #22222282;
     column-gap:2em;}
-  #gpausebtn{font-size:3rem;}
+  #gpausebtn > div{ width:3rem;height:3rem; }
   #time_rec{font-size:2em;}
-  #ToggleSketch{font-size:30px; right:.2em; bottom:.2em;}
+  #ToggleSketch{right:.5em; bottom:.5em;}
+  #ToggleSketch > div {width:30px;height:30px;}
   #plygnd button { padding: .7vw 0; font-size:1.96rem;}
   #p-input {gap: .2em;}
+  #p-input .vector_fontawesomeicons { width:1.96rem; }
 }
 @media (max-width:600px) { /*mobile view*/
   #plygnd {gap:1.2em; font-size:2rem;}
+  #p-input .vector_fontawesomeicons { width:2rem; }
+
   #p-output{width:80%; margin: auto;}
   #p-output input {width: 90%;}
   #p-output p {font-size:2rem;}
@@ -29,9 +33,10 @@
   #eval_ply{box-shadow:12px 11px 0px 1px #22222282;
   column-gap:1em;}
   #eval_ply label[evalt="timer"]+span{grid-column:1;}
-  #gpausebtn{font-size:2.5rem;}
+  #gpausebtn > div{ width:2.5rem;height:2.5rem; }
   #time_rec{font-size:1.7em;}
-  #ToggleSketch{font-size:25px; right:.7em; bottom:1.3em;}
+  #ToggleSketch{right:.7em; bottom:1.3em;}
+  #ToggleSketch > div {width:25px;height:25px;}
 }
 
 #gtoolbar{position: relative !important; top:0; left:0;}
@@ -65,7 +70,7 @@
   border-radius:7px; border:solid 0 rgb(0 0 0 / 28%);
   border-right-width:3px; border-bottom-width:2px;
   box-shadow: 2px 3px 3px 0 rgb(0 0 0 / 25%);
-  line-height:1;
+  line-height:1; position:relative;
 }
 #plygnd button:active {
   border: solid 1px rgb(0 0 0 / 50%);
@@ -74,9 +79,24 @@
 #plygnd button:not(#pin-del, #posneg, #pin-enter){background:var(--cp7); color:#000;}
 #pin-del, #posneg, #pin-enter {background-color:var(--cp1); color:#fff;}
 #plygnd button:active {background:var(--cp1);}
+#p-input .vector_fontawesomeicons {
+  vertical-align: -0.125em; /* Bare SVGs on the Web css property by Font Awesome Docs */
+  height:auto; filter:var(--vg_fff);
+}
+
 
 /* toolbar addons */
-#gpausebtn {color:var(--cp5); cursor:pointer;}
+#gpausebtn {
+  background-color:#fff; border-radius:100%;
+  cursor:pointer; height:auto; width:fit-content;
+}
+#gpausebtn > div { filter:var(--vg_cp5); } /* its width&height is defined on @media */
+#gpausebtn[state="pause"] > div {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM224 192l0 128c0 17.7-14.3 32-32 32s-32-14.3-32-32l0-128c0-17.7 14.3-32 32-32s32 14.3 32 32zm128 0l0 128c0 17.7-14.3 32-32 32s-32-14.3-32-32l0-128c0-17.7 14.3-32 32-32s32 14.3 32 32z"/></svg>');
+}
+#gpausebtn[state="play"] > div {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c-7.6 4.2-12.3 12.3-12.3 20.9l0 176c0 8.7 4.7 16.7 12.3 20.9s16.8 4.1 24.3-.5l144-88c7.1-4.4 11.5-12.1 11.5-20.5s-4.4-16.1-11.5-20.5l-144-88c-7.4-4.5-16.7-4.7-24.3-.5z"/></svg>');
+}
 #time_rec {
   font-family:"Iceberg", sans-serif;
   background:#fff;
@@ -126,9 +146,15 @@ div:has(>#tryg, >#savscore){
 /* addons */
 #ToggleSketch {
   position:absolute;
-  padding:.3em; z-index:210507;
+  padding:.5em; z-index:210507;
   cursor:grab;
 }
 #ToggleSketch:active{cursor:grabbing;}
 #ToggleSketch:not([used]){border-radius:10px; background:var(--cp5); color:#fff;}
+#ToggleSketch:not([used]) > div {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z" fill="white"/></svg>');
+}
 #ToggleSketch[used]{border-radius:50px; background:#ffa857;}
+#ToggleSketch[used] > div {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z" fill="black"/></svg>');
+}
